--- a/ktmaterial/themes/kitification/sass/_utilities.scss
+++ b/ktmaterial/themes/kitification/sass/_utilities.scss
@@ -727,6 +727,12 @@ iframe.formframe {
                 font-size: 14px;
                 height: 24px;
                 margin-right: 40px;
+                width: auto;
+
+                &:after {
+                  content: '';
+                  display: none;
+                }
 
                 .button {
                   display: inline-block;
